# UQDash

./: CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: api_reference.md  calibration_guide.md  model_development.md  user_guide.md  validation_guide.md
examples/: logistic_calibration_data.csv  logistic_model.py  logistic_validation_data.csv  tnbc_model.py
uqdash/: comparison.py  loader.py  plots.py  run.py
uqdash/analysis/: __init__.py  common.py  dispatcher.py  efast.py  morris.py  sobol.py
uqdash/calibration/: __init__.py  core.py
uqdash/dashboard/: calibration_tab.py  comparison.py  convergence.py  manifold_explorer.py  method_comparison.py  parameter_ordering.py  parameter_tab.py  parameters.py  project_dashboard.py  projection_explorer.py  sensitivity_tab.py  sidebar.py  simulation_tab.py  uncertainty.py  uncertainty_tab.py  validation_tab.py
uqdash/diagnostics/: convergence.py
uqdash/exploration/: manifold.py
uqdash/plots/: __init__.py  calibration.py  common.py  diagnostics.py  distributions.py  manifold.py  projections.py  sensitivity.py  simulation.py  validation.py
uqdash/reports/: calibration_report.py  parameter_analysis_report.py  sensitivity_report.py  uncertainty_report.py  validation_report.py
uqdash/simulation/: __init__.py  core.py
uqdash/uncertainty/: propagation.py  sampling.py
uqdash/validation/: core.py
